fix; some spacing

--- a/css/register.css
+++ b/css/register.css
@@ -32,6 +32,8 @@ font-family: 'Lilita One', sans-serif;
 
 html {
     scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
 }
 
 body { 
