--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 *, *::before, *::after {
     box-sizing: border-box;
+
 }
 
 /*
@@ -32,6 +33,8 @@ font-family: 'Lilita One', sans-serif;
 
 html {
     scroll-behavior: smooth;
+    margin: 0;
+    padding: 0;
 }
 
 body { 
@@ -57,7 +60,6 @@ h1 {
     font-weight: var(--fw-bold);
     font-size: var(--fs-h1);
     text-transform: capitalize;
-    letter-spacing: .45rem;
 }
 
 p {
